# master-thesis

./: LICENSE  Matus_corona diagram.ai  Matus_corona diagram_old.ai  README.md  covid.cap  instance_benchmark.cap  master-thesis.code-workspace
conversion/: Cargo.toml
converter/: Cargo.toml
data/RandomPDB/: B.ron  C.ron  sphere.ron  sphere2.ron
data/RandomSpheres/: INNER_1.ron  INNER_25.ron  INNER_27.ron  INNER_3.ron  INNER_33.ron  INNER_4.ron  INNER_8.ron  INNER_9.ron  OUTER_1.ron  OUTER_11.ron  OUTER_18.ron  OUTER_2.ron  OUTER_20.ron  OUTER_24.ron  OUTER_26.ron  OUTER_3.ron  OUTER_30.ron  OUTER_31.ron  OUTER_32.ron  OUTER_33.ron  OUTER_34.ron  OUTER_35.ron  OUTER_37.ron  OUTER_4.ron  OUTER_7.ron  OUTER_9.ron  create_lods.ps1  create_ron.ps1  sphere.ron  sphere2.ron  sphere3.ron  sphere4.ron
data/RandomSpheres/outer/: INNER_10.ron  INNER_11.ron  INNER_12.ron  INNER_15.ron  INNER_18.ron  INNER_19.ron  INNER_20.ron  INNER_29 .ron  INNER_30.ron  INNER_35.ron  INNER_37.ron  INNER_38.ron  INNER_39.ron  INNER_5.ron
data/SARS-CoV-2/: A.ron  C.ron  CRYSTALL_CUT_SINGLE.ron  CRYSTALL_CUT_SINGLE2.ron  CTD.ron  E.ron  FLUID_CUT_SINGLE.ron  FLUID_CUT_SINGLE2.ron  G.ron  M.ron  NTD.ron  P.ron  U.ron
data/mol-models/: 1a1t_model1_a.ron  1ak4a.ron  1esx.ron  1ex4.ron  1jff.ron  1jfwpm.ron  3hvt.ron  3j3q_1vu4_a_biomt.ron  7hvp.ron  HIV.ron  MICROTUBULE.ron  RNA_ALLPOINTS.ron  hiv.txt  hiv1_p6_swissmod_0_1_0.ron  hiv1_p6_vpr.ron  hiv1_sp1_hack_0_1_0.ron  hiv1_sp2_hack_0_1_0.ron  microtubule.txt  modbase_vif.ron  nefstef_1.ron
kmeans/: Cargo.toml
kmeans/src/: lib.rs
lod_creator/: Cargo.toml
lod_creator/src/: main.rs
lod_preview/: Cargo.toml  out1.txt  out2.txt
lod_preview/src/: application.rs  camera.rs  main.rs
lod_preview/src/pipelines/sphere_billboards/: billboards.frag  billboards.vert  billboards.vert.spv  compile_shaders.bat  mod.rs
master_thesis/: Cargo.toml  README.md  bench.csv  cargo-timing-20200903T213226Z.html  cargo-timing.html  colors.ron  compile_web.ps1  early_depth.drawio  generate_colors.ps1  hiv  hiv_out.txt  idea.drawio  main.patch  microtubule_out.txt  nodes.drawio  out.txt  realtime.drawio  triangle_vs_square.drawio  visibility.drawio
master_thesis/figures/: Matus_corona diagram.ai  bench2.csv  bench3.csv  bench4.csv  bench5.csv  colors.drawio  data.drawio  discretization.drawio  final_benchmarks.csv  final_benchmarks.xlsx  hilbert_unit_mapping.drawio  idea_gaps.drawio  pipeline.drawio  visibility.drawio
master_thesis/src/: camera.rs  framework.rs  frustrum_culler.rs  hilbert.rs  lib.rs  pvs.rs  structure.rs
master_thesis/src/pipelines/: mod.rs
master_thesis/src/pipelines/sphere_billboards/: billboards.frag  billboards.frag.spv  billboards.vert  billboards.vert.spv  billboards_debug.frag.spv  billboards_debug.vert.spv  billboards_depth.comp  billboards_depth.comp.spv  billboards_depth.frag  billboards_depth.frag.spv  billboards_depth.vert  billboards_depth.vert.spv  billboards_depth_resolve.comp  billboards_depth_resolve.comp.spv  billboards_depth_write.frag.spv  billboards_depth_write.vert.spv  billboards_normals.frag.spv  compile_shaders.bat  mod.rs
master_thesis/src/postprocess/: chroma.comp  chroma.comp.spv  combine.comp  combine.comp.spv  combine2.comp  combine2.comp.spv  compiler_shaders.bat  contours.comp  contours.comp.spv  dof.comp  dof.comp.spv  dof_old.comp  gaussx.comp  gaussx.comp.spv  gaussy.comp  gaussy.comp.spv  mod.rs  mono-tone.comp  mono-tone.comp.spv
master_thesis/src/ssao/: CSApply.comp  CSEdgeSensitiveBlur.comp  CSGenerateQ3.comp  CSPrepareNativeDepthsAndMips.comp  CSPrepareNativeNormalsFromInputNormals.comp  apply.comp.spv  blur.comp.spv  common.glsl  compiler_shaders.bat  consts.glsl  mod.rs  normals_from_depth.comp  normals_from_depth.comp.spv  prepare.vert.spv  prepare_depths.comp.spv  prepare_normals.comp.spv  ssao.comp.spv  ssao.vert.spv
occlusion_preprocess/: Cargo.toml  idea.drawio
occlusion_preprocess/src/: application.rs  biological_structure.rs  camera.rs  hilbert.rs  main.rs  pvs.rs  structure.rs
occlusion_preprocess/src/pipelines/: mod.rs
occlusion_preprocess/src/pipelines/lines/: compile_shaders.bat  lines.frag  lines.frag.spv  lines.vert  lines.vert.spv  mod.rs
occlusion_preprocess/src/pipelines/sphere_billboards/: billboards.frag  billboards.frag.spv  billboards.vert  billboards.vert.spv  billboards_depth.frag  billboards_depth.frag.spv  billboards_depth.vert  billboards_depth.vert.spv  billboards_depth_write.frag.spv  mod.rs
ron_loader/: Cargo.toml
ron_loader/src/: lib.rs  molecule.rs  structure.rs
rpdb/: Cargo.toml
rpdb/src/: lib.rs  lod.rs  molecule.rs  structure.rs
sphere_creator/: Cargo.toml
sphere_creator/src/: main.rs
