[package]
name = "lod_creator"
version = "0.1.0"
authors = ["Matúš Talčík <matus.talcik@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra-glm = "0.11"
kmeans = { path = "../kmeans" }
rpdb = { path = "../rpdb" }