[package]
name = "lod_preview"
version = "0.1.0"
authors = ["Matúš Talčík <matus.talcik@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Window, Input, Graphics
winit = { version = "0.24", features = ["web-sys"] }
wgpu = { version = "0.7", git = "https://github.com/gfx-rs/wgpu-rs" }

# Math
nalgebra-glm = "0.11"

# Utils
futures = "0.3"
log = "0.4"
bytemuck = "1"

# Format loading
ron = "0.6"
rpdb = { path = "../rpdb" }