[package]
name = "rpdb"
version = "0.1.0"
authors = ["Matúš Talčík <matus.talcik@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
nalgebra-glm = { version = "0.7.0", features = ["serde-serialize"]  }
ron = "0.6"
lib3dmol = "0.3.2"